se agrega transicion

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/productos.css">
+    <link rel="stylesheet" href="css/modal.css">
 </head>
 <body>
     <div class="container-fluid px-0">
@@ -75,10 +76,30 @@
     <!-- Bootstrap JS y Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/modal.js"></script>
     <div class="floating-logo fa-bounce">
         <a href="https://www.instagram.com/padell_x3/" target="_blank">
             <img src="logo.png" alt="Logo de Instagram">
         </a>
+    </div>
+    
+    <!-- Modal de detalles del producto -->
+    <div id="producto-modal" class="producto-modal">
+        <div class="modal-contenido">
+            <span class="cerrar-modal">&times;</span>
+            <div class="modal-cuerpo">
+                <div class="modal-imagen">
+                    <img id="modal-img" src="" alt="Imagen del producto">
+                </div>
+                <div class="modal-info">
+                    <h3 id="modal-nombre" class="modal-nombre"></h3>
+                    <div id="modal-marca" class="modal-marca"></div>
+                    <div id="modal-precio" class="modal-precio"></div>
+                    <div id="modal-precio-transferencia" class="modal-precio-transferencia"></div>
+                    <div id="modal-cuotas" class="modal-cuotas"></div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
