--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <button class="marca-btn" data-marca="ADIDAS">ADIDAS</button>
                     <button class="marca-btn" data-marca="BULLPADEL">BULLPADEL</button>
                     <button class="marca-btn" data-marca="DROPSHOT">DROPSHOT</button>
-                    <button class="marca-btn" data-marca="KOMBAT">KOMBAT</button>
+                    <button class="marca-btn" data-marca="STARVIE">STARVIE</button>
                     <button class="marca-btn" data-marca="NOX">NOX</button>
                 </div>
             </div>
